# TIFCompare

./: CMakeLists.txt  build.sh
src/: rastershow.cpp  rastershow.h
